[gd_scene load_steps=26 format=2]

[ext_resource path="res://scene/HexGrid.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/TimeControls.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/Level.gd" type="Script" id=3]
[ext_resource path="res://fonts/UI_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://scene/Particle/Confetti.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/QuitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/UITHeme.tres" type="Theme" id=7]
[ext_resource path="res://fonts/Tutorial.tres" type="DynamicFont" id=8]
[ext_resource path="res://UI/time_indicator.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 5
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 830, 830 )

[sub_resource type="AtlasTexture" id=2]
flags = 5
atlas = ExtResource( 9 )
region = Rect2( 830, 0, 830, 830 )

[sub_resource type="AtlasTexture" id=3]
flags = 5
atlas = ExtResource( 9 )
region = Rect2( 1660, 0, 830, 830 )

[sub_resource type="AtlasTexture" id=4]
flags = 5
atlas = ExtResource( 9 )
region = Rect2( 2490, 0, 830, 830 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="InputEventKey" id=15]
scancode = 82

[sub_resource type="ShortCut" id=16]
shortcut = SubResource( 15 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0470588, 0.027451, 0.027451, 0 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/Quicksand-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 3
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 7 )

[sub_resource type="Animation" id=10]
length = 3.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Congrats:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0.835294, 0, 1 ), Color( 0.333333, 1, 0, 1 ), Color( 0, 1, 0.5, 1 ), Color( 0, 0.666667, 1, 1 ), Color( 0.166667, 0, 1, 1 ), Color( 1, 0, 1, 1 ), Color( 1, 0, 0.166667, 1 ) ]
}

[sub_resource type="InputEventKey" id=13]
scancode = 16777217

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Level" type="Node"]
script = ExtResource( 3 )

[node name="PlayHexGrid" parent="." instance=ExtResource( 1 )]
origin_hex = Vector2( 960, 540 )
placeable = true

[node name="TimeIndicator" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 946.896, 995.376 )
scale = Vector2( 0.187349, 0.187349 )
frames = SubResource( 5 )

[node name="TimeControls" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -233.5
margin_top = -149.046
margin_right = 233.5
margin_bottom = -20.0
alignment = 1

[node name="Reset" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -169.0
margin_top = -92.0
margin_right = -18.0
margin_bottom = -14.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
shortcut = SubResource( 16 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnTimer" type="Timer" parent="."]

[node name="LevelFinish" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Congrats" type="RichTextLabel" parent="LevelFinish"]
modulate = Color( 0, 0.997135, 0.504298, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -354.0
margin_top = 63.496
margin_right = 354.0
margin_bottom = 183.496
custom_fonts/normal_font = SubResource( 8 )
text = " Congratulations!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="LevelFinish"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -408.826
margin_top = -63.0
margin_right = -23.8264
margin_bottom = 63.0
focus_mode = 0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextColour" type="AnimationPlayer" parent="LevelFinish"]
autoplay = "TextEffect"
anims/TextEffect = SubResource( 10 )

[node name="LevelFinishDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Confetti" parent="." instance=ExtResource( 5 )]
position = Vector2( 395.298, 1080.2 )

[node name="Confetti2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1548.58, 1067.12 )

[node name="Quit" parent="." instance=ExtResource( 6 )]
shortcut = SubResource( 14 )

[node name="Tutorial" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -339.5
margin_top = 120.0
margin_right = 339.5
margin_bottom = 273.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 8 )
text = "Complete the land."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialStay" type="Timer" parent="Tutorial"]
wait_time = 3.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tutorial"]
anims/TutorialFadeIn = SubResource( 11 )
anims/TutorialFadeOut = SubResource( 12 )
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
[connection signal="pressed" from="LevelFinish/Continue" to="." method="_on_Continue_pressed"]
[connection signal="timeout" from="LevelFinishDelay" to="." method="display_finished_level_dialog"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Tutorial/TutorialStay" to="." method="_on_TutorialStay_timeout"]
